<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gem_calculator"
        android:gravity="center"
        android:textSize="30sp"
        android:padding="10dp"/>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/border_image"
                android:background="@drawable/marq_ruby"
                android:alpha="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/need"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="5dp"
                android:background="@color/opaqueBlack"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/have"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="5dp"
                android:background="@color/opaqueBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/flawless_royal_gem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flawless_royal_ruby"
                android:layout_gravity="center"
                android:contentDescription="@string/flaw_royal_gem"/>
            <EditText
                android:id="@+id/need_flawless_royal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_need"/>
            <EditText
                android:id="@+id/have_flawless_royal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_have" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/royal_gem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/royal_ruby"
                android:layout_gravity="center"
                android:contentDescription="@string/royal_gem"/>
            <EditText
                android:id="@+id/need_royal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_need"/>
            <EditText
                android:id="@+id/have_royal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_have" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:id = "@+id/flawless_imperial_gem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flawless_imperial_ruby"
                android:layout_gravity="center"
                android:contentDescription="@string/flaw_imperial_gem"/>
            <EditText
                android:id="@+id/need_flawless_imperial"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_need" />
            <EditText
                android:id="@+id/have_flawless_imperial"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_have" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imperial_gem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/imperial_ruby"
                android:layout_gravity="center"
                android:contentDescription="@string/imperial_gem"/>
            <EditText
                android:id="@+id/need_imperial"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_need" />
            <EditText
                android:id="@+id/have_imperial"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_have" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/marquise_gem"
                android:src="@drawable/marq_ruby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/marq_gem"/>
            <EditText
                android:id="@+id/need_marquise"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_need" />
            <EditText
                android:id="@+id/have_marquise"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/opaquerBlack"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:cursorVisible="false"
                android:contentDescription="@string/et_have" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:background="@drawable/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:contentDescription="@string/gold_image"/>
        <TextView
            android:layout_margin="1dp"
            android:text="@string/zero"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/gold_display"
            android:background="@color/opaquerBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </LinearLayout>
    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>
</LinearLayout>